--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,3 +1,6 @@
+worker_processes  1;
+user nghia;
+
 events {}
 
 http {
@@ -13,7 +16,8 @@ http {
 
         location /auth {
             default_type text/plain;
-            content_by_lua_file /home/nghia/vnuid-gateway/lua/jwt.lua;
+            # content_by_lua_file /home/nghia/vnuid-gateway/lua/jwt.lua;
+            access_by_lua_file /home/nghia/vnuid-gateway/lua/jwt.lua;
         }
     }
 }
