--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,11 +5,11 @@ events {}
 
 http {
     lua_package_path "/usr/local/share/lua/5.1/?.lua;;";
+    limit_req_zone $binary_remote_addr zone=one:10m rate=100r/s;
 
     # upstream vnuid_identity {
     #     server vnuid_identity:3333;
     # }
-
 
     server {
         listen 80;
