--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -7,16 +7,42 @@ http {
     lua_package_path "/usr/local/share/lua/5.1/?.lua;;";
     limit_req_zone $binary_remote_addr zone=one:10m rate=100r/s;
 
-    # upstream vnuid_identity {
-    #     server vnuid_identity:3333;
-    # }
+    upstream vnuid_identity {
+        # server vnuid_identity:4444;
+        server host.docker.internal:4444;
+    }
+
+    upstream vnuid_management {
+        server host.docker.internal:3000;
+    }
 
     server {
         listen 80;
 
         location /auth {
             default_type text/plain;
+            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
+            proxy_pass http://vnuid_identity$request_uri;
+        }
+
+        location /nfc {
+            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
+            proxy_pass http://vnuid_identity$request_uri;
+        }
+
+        location /user/ {
+            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
+            proxy_pass http://vnuid_identity$request_uri;
+        }
+
+        location /manage {
+            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
+            proxy_pass http://vnuid_identity$request_uri;
+        }
+
+        location /checkin {
             access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
+            proxy_pass http://vnuid_management$request_uri;
         }
     }
 }
