--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -8,8 +8,8 @@ http {
     limit_req_zone $binary_remote_addr zone=one:10m rate=100r/s;
 
     upstream vnuid_identity {
-        # server vnuid_identity:4444;
-        server host.docker.internal:4444;
+        server vnuid_identity:4444;
+        # server host.docker.internal:4444;
     }
 
     upstream vnuid_management {
