--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -19,28 +19,42 @@ http {
     server {
         listen 80;
 
-        location /auth {
-            default_type text/plain;
+        location ~* ^/(auth|nfc|user|manage) {
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
+
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+
+            # Nếu muốn xử lý xác thực bằng Lua:
             # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
+
             proxy_pass http://vnuid_identity$request_uri;
         }
 
-        location /nfc {
-            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
-            proxy_pass http://vnuid_identity$request_uri;
-        }
+         location ~* ^/(checkin|admin|subject) {
+            if ($request_method = OPTIONS) {
+                add_header 'Access-Control-Allow-Origin' '*' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Length' 0;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                return 204;
+            }
 
-        location /user/ {
-            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
-            proxy_pass http://vnuid_identity$request_uri;
-        }
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
 
-        location /manage {
-            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
-            proxy_pass http://vnuid_identity$request_uri;
-        }
-
-        location /checkin {
             access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
             proxy_pass http://vnuid_management$request_uri;
         }
