--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -16,47 +16,46 @@ http {
         server host.docker.internal:3000;
     }
 
+    map $request_method $cors_preflight {
+        default 0;
+        OPTIONS 1;
+    }
+
     server {
         listen 80;
 
-        location ~* ^/(auth|nfc|user|manage) {
-            if ($request_method = OPTIONS) {
-                add_header 'Access-Control-Allow-Origin' '*' always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+        set $CORS_ORIGIN "http://localhost:4000";
+        set $CORS_METHODS "GET, POST, OPTIONS, PUT, DELETE";
+        set $CORS_HEADERS "Content-Type, Authorization";
+
+        location ~* ^/(auth|nfc|user|manage|checkin|admin|subject|search) {
+
+            if ($cors_preflight) {
+                add_header 'Access-Control-Allow-Origin' $CORS_ORIGIN always;
+                add_header 'Access-Control-Allow-Methods' $CORS_METHODS always;
+                add_header 'Access-Control-Allow-Headers' $CORS_HEADERS always;
                 add_header 'Access-Control-Max-Age' 1728000;
                 add_header 'Content-Length' 0;
                 add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
                 return 204;
             }
 
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
+            add_header 'Access-Control-Allow-Origin' $CORS_ORIGIN always;
+            add_header 'Access-Control-Allow-Methods' $CORS_METHODS always;
+            add_header 'Access-Control-Allow-Headers' $CORS_HEADERS always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
 
-            # Nếu muốn xử lý xác thực bằng Lua:
-            # access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
-
-            proxy_pass http://vnuid_identity$request_uri;
-        }
-
-         location ~* ^/(checkin|admin|subject) {
-            if ($request_method = OPTIONS) {
-                add_header 'Access-Control-Allow-Origin' '*' always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-                add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Length' 0;
-                add_header 'Content-Type' 'text/plain charset=UTF-8';
-                return 204;
+            # Identity routes
+            if ($uri ~ ^/(auth|nfc|user|manage)) {
+                proxy_pass http://vnuid_identity$request_uri;
             }
 
-            add_header 'Access-Control-Allow-Origin' '*' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization' always;
-
-            access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
-            proxy_pass http://vnuid_management$request_uri;
+            # Management routes (with JWT)
+            if ($uri ~ ^/(checkin|admin|subject|search)) {
+                access_by_lua_file /usr/local/openresty/nginx/lua/jwt.lua;
+                proxy_pass http://vnuid_management$request_uri;
+            }
         }
     }
 }
