--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -13,7 +13,8 @@ http {
     }
 
     upstream vnuid_management {
-        server host.docker.internal:3000;
+        server vnuid_management:3000;
+        # server host.docker.internal:3000;
     }
 
     map $request_method $cors_preflight {
